# shadow-mentor

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  index.html  llms.txt  package-lock.json  package.json  product-facts.json  release-state.json  robots.txt  server.json  vercel.json  verify-explainers.html  verify-v2-candidate.html  verify.html
.github/: pull_request_template.md
.impeccable/: config.json
api/: ambient-turn.js  attestation-info.js  badge.js  banking-profile.js  calibration.js  deliberate.js  evidence-events.js  health.js  loan-council-from-pdf.js  loan-council.js  mcp-manifest.js  recall.js  scan-analyze.js  scenarios.js  shadow-lens-analyze.js  shadow-lens.js  spatial-render.js  verify-attestation.js  verify-chain.js  version.js
benchmark/: report-2026-06-18.json  runner.js
demo/: xreal.html
demos/: guided-shadow-demo.html  index.html  shadow-embed-protocol.mjs  shadow-explainer-landing.html
design/: FLOW_SHADOW_RESPONSIBILITY_BOUNDARY.md  PRESENTATION_EDIT_POLICY.md  SHADOW_FLOW_PRESENTATION_ADAPTER.md  shadow-spatial-tokens.json
docs/: 2026-06-17-market-research-memo.md  ARCHITECTURE.md  AUDITOR_COVERAGE_MATRIX.md  AUTONOMOUS_SESSION_RULES.md  BIAN_COVERAGE.md  CITATION_MAP.csv  CITATION_MAP.html  CITATION_MAP.md  CLAIM_EVIDENCE_GRAPH.md  COMPARISON.md  ETICAS_TAXONOMY.md  EXPLAINER_EMBEDDING_SECURITY.md  EXPLAINER_INTEGRATION_PLAN.md  (+91 more)
python/: README.md  pyproject.toml
python/shadow_verify/: __init__.py
python/tests/: test_verify.py
(+1228 files in other folders)
